Added database queries for courses on dashboard.

--- a/config/locales/tarkisto.en.yml
+++ b/config/locales/tarkisto.en.yml
@@ -9,6 +9,9 @@ en:
                other: "Other studies"
      
      pages:
+          dashboard:
+               practice: "Practice"
+               addnew: "Add exam"
           exams:
                tabs:
                     all: "All exams"
