--- a/config/locales/tarkisto.en.yml
+++ b/config/locales/tarkisto.en.yml
@@ -21,6 +21,18 @@ en:
                     add: "Add new exam"
                     generate: "Generate practice exam"
                     all: "All exams"
+               forms:
+                    selection:
+                         name: "Select exam"
+                         new: "-- New exam --"
+                    newexam:
+                         type: "Exam type"
+                         maxpoints: "Maximum points"
+                         course: "Course"
+                         lecturer: "Lecturer"
+                         date: "Date"
+                         public: "Exam is public"
+                         continue: "Continue"
      
           session:
                form:
