Added basic structure for exam input.

--- a/config/locales/tarkisto.en.yml
+++ b/config/locales/tarkisto.en.yml
@@ -33,6 +33,8 @@ en:
                          date: "Date"
                          public: "Exam is public"
                          continue: "Continue"
+                    publish:
+                         submit: "Publish"
      
           session:
                form:
