Created full course lists views. To-do: Tests, routes and styling.

--- a/config/locales/tarkisto.en.yml
+++ b/config/locales/tarkisto.en.yml
@@ -33,3 +33,8 @@ en:
                     submit: "Log in"
                     title: "Log in"
                logout: "Log out"
+
+               
+          courses:
+               showall: "Show all"
+               back: "Back to dashboard"
