--- a/config/locales/tarkisto.fi.yml
+++ b/config/locales/tarkisto.fi.yml
@@ -43,3 +43,7 @@ fi:
                     submit: "Kirjaudu"
                     title: "Kirjaudu sisään"
                logout: "Kirjaudu ulos"
+               errors:
+                    login_failed: "Kirjautumisyrityksesi epäonnistui"
+               notifications:
+                    logout: "Onnistuneesti kirjauduttu ulos"
