Added logged in information.

--- a/config/locales/tarkisto.en.yml
+++ b/config/locales/tarkisto.en.yml
@@ -44,6 +44,7 @@ en:
                     submit: "Log in"
                     title: "Log in"
                logout: "Log out"
+               logged_in: "Logged in"
                errors:
                     login_failed: "Your login attempt failed"
                notifications:
