--- a/config/locales/tarkisto.en.yml
+++ b/config/locales/tarkisto.en.yml
@@ -13,6 +13,7 @@ en:
                practice: "Practice"
                addnew: "Add exam"
           exams:
+               no-exams: "No exams."
                tabs:
                     all: "All exams"
                     generate: "Generate"
@@ -57,3 +58,4 @@ en:
           courses:
                showall: "Show all"
                back: "Back to dashboard"
+               show-hide-unpublished: "Show/hide unpublished courses"
