Fixed localization on database and seeds file.
Added support for pdf outputting tests from the "PDF" button at test listing.

--- a/config/locales/tarkisto.fi.yml
+++ b/config/locales/tarkisto.fi.yml
@@ -1,5 +1,13 @@
 fi:
 
+     pdf:
+          school:
+               name: "Helsingin Yliopisto"
+               department: "Tietojenkäsittelytiede"
+          exam:
+               max_points: "Maksimipisteet"
+               points: "pistettä"
+
      courses:
           title: "Kurssit"
           levels:
