--- a/config/locales/tarkisto.fi.yml
+++ b/config/locales/tarkisto.fi.yml
@@ -43,6 +43,9 @@ fi:
                          continue: "Jatka"
                     publish:
                          submit: "Esikatsele"
+                    preview:
+                         title: "Esikatselu"
+                         submit: "Julkaise"
      
           session:
                form:
