Added new question creation.

--- a/config/locales/tarkisto.en.yml
+++ b/config/locales/tarkisto.en.yml
@@ -46,6 +46,8 @@ en:
                     preview:
                          title: "Preview"
                          submit: "Publish"
+                    questions:
+                         new: "New question"
      
           session:
                form:
