Added translations for some database models. Removed extra debugging messages. Added name output for questions. Added question data output.

--- a/config/locales/tarkisto.en.yml
+++ b/config/locales/tarkisto.en.yml
@@ -1,6 +1,12 @@
 en:
 
      activerecord:
+          models:
+               exam: "Exam"
+          attributes:
+               exam:
+                    date: "Date"
+                    maximum_points: "Maximum points"
           errors:
                messages:
                     points_not_match: "aren't sum of points"
