--- a/config/locales/tarkisto.en.yml
+++ b/config/locales/tarkisto.en.yml
@@ -64,6 +64,7 @@ en:
                          submit: "Publish"
                     questions:
                          new: "New question"
+                         delete: "Are you sure, that you want to delete this question?"
 
           session:
                form:
