--- a/config/locales/tarkisto.fi.yml
+++ b/config/locales/tarkisto.fi.yml
@@ -64,6 +64,7 @@ fi:
                          submit: "Julkaise"
                     questions:
                          new: "Uusi kysymys"
+                         delete: "Haluatko varmasti poistaa kysymyksen?"
 
           session:
                form:
