Added exam back/delete button.

--- a/config/locales/tarkisto.en.yml
+++ b/config/locales/tarkisto.en.yml
@@ -59,6 +59,7 @@ en:
                          continue: "Continue"
                     publish:
                          submit: "Preview"
+                         back: "Back"
                     preview:
                          title: "Preview"
                          submit: "Publish"
