Added Image uploading functions and new dependency for paperclip

--- a/config/locales/tarkisto.fi.yml
+++ b/config/locales/tarkisto.fi.yml
@@ -65,6 +65,9 @@ fi:
                     questions:
                          new: "Uusi kysymys"
                          delete: "Haluatko varmasti poistaa kysymyksen?"
+                         image:
+                              title: "Lisää kuva"
+                              submit: "Lisää"
 
           session:
                form:
