--- a/config/locales/tarkisto.en.yml
+++ b/config/locales/tarkisto.en.yml
@@ -5,6 +5,8 @@ en:
                exam: "Exam"
           attributes:
                exam:
+                    course: "Course"
+                    type_id: "Exam type"
                     date: "Date"
                     maximum_points: "Maximum points"
           errors:
@@ -51,10 +53,6 @@ en:
                          name: "Select exam"
                          new: "-- New exam --"
                     newexam:
-                         type: "Exam type"
-                         maxpoints: "Maximum points"
-                         course: "Course"
-                         date: "Date"
                          public_notification: "Exam is public by default"
                          continue: "Continue"
                     publish:
@@ -72,10 +70,12 @@ en:
                          description: "Description"
                          points: "Points"
                          themes: "Theme"
-                         add_pic: "Add picture"
                          add_code: "Add code"
                          add_formula: "Add formula"
                          remove: "[remove]"
+                         image:
+                              title: "Add picture"
+                              submit: "Add"
 
           session:
                form:
