--- a/config/locales/tarkisto.fi.yml
+++ b/config/locales/tarkisto.fi.yml
@@ -46,6 +46,11 @@ fi:
                          date: "Päivämäärä"
                          public_notification: "Tentti ei ole oletusarvoisesti julkinen"
                          continue: "Jatka"
+                    generate:
+                         how_many: "Kuinka monta:"
+                         themeless: "Teemattomat"
+                         generate: "Generoi"
+                         cannot_generate: "Koetta ei voida generoida koska kurssiin ei liity yhtään kysymystä."
                     publish:
                          submit: "Julkaise"
 
