Added formula adding with few other changes.

--- a/config/locales/tarkisto.fi.yml
+++ b/config/locales/tarkisto.fi.yml
@@ -50,6 +50,7 @@ fi:
                     repeat-exams: "Uusintakokeet"
                forms:
                     continue: "Jatka"
+                    save: "Tallenna"
                     selection:
                          name: "Valitse tentti"
                          new: "-- Uusi tentti --"
