Fixed the bug in exam input that it shows generated exam as an option. Also changed some labels.

--- a/config/locales/tarkisto.en.yml
+++ b/config/locales/tarkisto.en.yml
@@ -40,7 +40,8 @@ en:
                          public_notification: "Exam isn't public by default"
                          continue: "Continue"
                     generate:
-                         how_many: "How many:"
+                         how_many: "How many questions:"
+                         change_question: "Change question"
                          themeless: "Themeless"
                          generate: "Generate"
                          continue: "Continue"
