button for Admin done. direct url-access to admin now impossible.

--- a/config/locales/tarkisto.fi.yml
+++ b/config/locales/tarkisto.fi.yml
@@ -96,6 +96,7 @@ fi:
                     title: "Kirjaudu sisään"
                logout: "Kirjaudu ulos"
                logged_in: "Kirjautuneena"
+               admin: "Admin"
                errors:
                     login_failed: "Kirjautumisyrityksesi epäonnistui"
                notifications:
