refactored to use exam builders instead of exams

--- a/config/locales/tarkisto.fi.yml
+++ b/config/locales/tarkisto.fi.yml
@@ -9,6 +9,10 @@ fi:
         type_id: "Koetyyppi"
         date: "Päivämäärä"
         maximum_points: "Maksimipisteet"
+      exam_builder:
+        type_id: "Koetyyppi"
+        date: "Päivämäärä"
+        maximum_points: "Maksimipisteet"
     errors:
       messages:
         points_not_match: "eivät ole pisteiden summa"
