added new question

--- a/config/locales/tarkisto.fi.yml
+++ b/config/locales/tarkisto.fi.yml
@@ -48,6 +48,7 @@ fi:
         generate: "Generoi harjoitustentti"
         all: "Kaikki tentit"
         edit: "Muokkaa tenttiä"
+        add_question: "Lisää uusi kysymys tenttiin"
       types:
         course-exams: "Kurssikokeet"
         separate-exams: "Erilliskokeet"
