apparently something about question creating

--- a/config/locales/tarkisto.fi.yml
+++ b/config/locales/tarkisto.fi.yml
@@ -3,6 +3,7 @@ fi:
   activerecord:
     models:
       exam: "Tentti"
+      question: "Kysymys"
     attributes:
       exam:
         course: "Kurssi"
